--- a/src/index.css
+++ b/src/index.css
@@ -316,12 +316,20 @@
 .p-r-100 {
   padding-right: 100px; }
 
+*,
+*:after,
+*:before {
+  box-sizing: border-box;
+}
+
 body,
 html {
   margin: 0;
   padding: 0;
   height: 100vh;
+  width: 100vw;
   font-family: 'Open Sans', sans-serif;
+  overflow: hidden;
 }
 
 body {
